[gd_scene load_steps=45 format=3 uid="uid://ddkq6hegyrcye"]

[ext_resource type="Script" path="res://Scene/Script/scene_combat.gd" id="1_moikl"]
[ext_resource type="Texture2D" uid="uid://cjqeemq82daob" path="res://image/Ari√®rePlanBoss2.png" id="2_2gwms"]
[ext_resource type="PackedScene" uid="uid://c81mpte26ou7w" path="res://UI/tuile_boite_de_texte.tscn" id="2_64qka"]
[ext_resource type="Texture2D" uid="uid://n1nq7l1p7jr6" path="res://Joueur/up_idle_1.png" id="2_dx3sd"]
[ext_resource type="PackedScene" uid="uid://tki2apulyx4e" path="res://Joueur/joueur.tscn" id="2_yayrs"]
[ext_resource type="PackedScene" uid="uid://pssn3cmtwxxo" path="res://Personne/enemie_trois.tscn" id="5_gmab1"]
[ext_resource type="PackedScene" uid="uid://blychabk2ucx7" path="res://Personne/ennemie_un.tscn" id="5_mwdkm"]
[ext_resource type="PackedScene" uid="uid://cof1ifb7mcc7j" path="res://Personne/jose.tscn" id="6_esgy4"]
[ext_resource type="Texture2D" uid="uid://cjbnp6ofg77he" path="res://UI/image/CodeJoueurAttaque.png" id="6_kvrxu"]
[ext_resource type="FontFile" uid="uid://dk537wexvu7ax" path="res://UI/SFPixelate.ttf" id="6_pb0xx"]
[ext_resource type="PackedScene" uid="uid://dpaydcc08g2tj" path="res://Personne/philipe.tscn" id="8_hl6ei"]
[ext_resource type="Texture2D" uid="uid://b1wkldekn2gkb" path="res://UI/image/barDeVie2.png" id="8_vanl5"]
[ext_resource type="Texture2D" uid="uid://dtu7edp2ib1j8" path="res://UI/image/vie2.png" id="9_ftsp3"]
[ext_resource type="Texture2D" uid="uid://tmwgpcjq8wkf" path="res://UI/image/Heart_Red_1.png" id="10_0avih"]
[ext_resource type="Texture2D" uid="uid://crk14tdafgt5b" path="res://Personne/UiDeBoss/FireHammerRedV1.png" id="10_b5adr"]
[ext_resource type="Texture2D" uid="uid://dgqwxrrmu3yt8" path="res://Personne/UiDeBoss/meteor shower-blue.png" id="15_jnc5g"]
[ext_resource type="Texture2D" uid="uid://ghodvn6lgtdd" path="res://UI/image/iconCerveau.png" id="15_rm1cg"]
[ext_resource type="PackedScene" uid="uid://c50yeq1k8yita" path="res://UI/boite_de_textes.tscn" id="18_trga6"]
[ext_resource type="Texture2D" uid="uid://c555jrgjye41k" path="res://UI/noir.png" id="19_v4430"]

[sub_resource type="Animation" id="Animation_uohgo"]
resource_name = "Bouger"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_oifwq"]
resource_name = "Idel"

[sub_resource type="Animation" id="Animation_7lkpv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hliwp"]
resource_name = "mort"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1w1u"]
_data = {
"Bouger": SubResource("Animation_uohgo"),
"Idel": SubResource("Animation_oifwq"),
"RESET": SubResource("Animation_7lkpv"),
"mort": SubResource("Animation_hliwp")
}

[sub_resource type="Animation" id="Animation_j5iy1"]
resource_name = "Attaque"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dicko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p2l72"]
_data = {
"Attaque": SubResource("Animation_j5iy1"),
"RESET": SubResource("Animation_dicko")
}

[sub_resource type="Animation" id="Animation_cluwy"]
resource_name = "Attaque"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_jg8td"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8sxuh"]
_data = {
"Attaque": SubResource("Animation_cluwy"),
"RESET": SubResource("Animation_jg8td")
}

[sub_resource type="Animation" id="Animation_0mn7k"]
resource_name = "AttaqueNormal"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(316, 307), Vector2(960, 215)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.980392, 1, 1, 1), Color(0.980392, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qw11s"]
resource_name = "AttaqueSpecial"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(316, 307), Vector2(316, 71), Vector2(900, 219)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1), Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.980392, 1, 1, 1), Color(0.980392, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_asig1"]
resource_name = "GrosseAttaque"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(316, 307), Vector2(975, 229)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 1, 1), Color(0.980392, 0, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_aqt4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(316, 307)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ot3op"]
_data = {
"AttaqueNormal": SubResource("Animation_0mn7k"),
"AttaqueSpecial": SubResource("Animation_qw11s"),
"GrosseAttaque": SubResource("Animation_asig1"),
"RESET": SubResource("Animation_aqt4p")
}

[sub_resource type="LabelSettings" id="LabelSettings_ba65b"]
font = ExtResource("6_pb0xx")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_17i7y"]
font = ExtResource("6_pb0xx")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_3e8ok"]
font = ExtResource("6_pb0xx")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_ggg57"]
font = ExtResource("6_pb0xx")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_2tlq4"]
font = ExtResource("6_pb0xx")
font_size = 10
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_n68nn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qkv1l"]
resource_name = "fin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4h511"]
resource_name = "finCombatNormal"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2nd8g"]
_data = {
"RESET": SubResource("Animation_n68nn"),
"fin": SubResource("Animation_qkv1l"),
"finCombatNormal": SubResource("Animation_4h511")
}

[node name="SceneCombat" type="Node2D"]
texture_filter = 1
script = ExtResource("1_moikl")

[node name="Ari√®rePlan" type="Sprite2D" parent="."]
position = Vector2(576, 249.5)
scale = Vector2(1.1875, 0.801758)
texture = ExtResource("2_2gwms")

[node name="Joueur" parent="." instance=ExtResource("2_yayrs")]
visible = false

[node name="Personnage" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(211, 340)
scale = Vector2(10, 10)
texture = ExtResource("2_dx3sd")
flip_h = true
hframes = 8
vframes = 8
frame = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="Personnage"]
libraries = {
"": SubResource("AnimationLibrary_g1w1u")
}

[node name="Ennemie" type="Node2D" parent="."]

[node name="EnnemieUn" parent="Ennemie" instance=ExtResource("5_mwdkm")]
visible = false
position = Vector2(900, 336)
scale = Vector2(8, 8)

[node name="enemie_trois" parent="Ennemie" instance=ExtResource("5_gmab1")]
visible = false
position = Vector2(919, 282)
scale = Vector2(8, 8)

[node name="Jose" parent="Ennemie" instance=ExtResource("6_esgy4")]
visible = false
position = Vector2(839, 258)
scale = Vector2(8, 8)

[node name="Philipe" parent="Ennemie" instance=ExtResource("8_hl6ei")]
visible = false
position = Vector2(900, 297)
scale = Vector2(2.5, 2.5)

[node name="AttaqueSpeciale1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(809, 180)
scale = Vector2(4, 4)
texture = ExtResource("10_b5adr")
hframes = 19

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttaqueSpeciale1"]
libraries = {
"": SubResource("AnimationLibrary_p2l72")
}

[node name="TimerProjectileSpecial" type="Timer" parent="AttaqueSpeciale1"]
one_shot = true

[node name="AttaqueSpeciale2" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(726, 126.75)
scale = Vector2(4.16798, 4.49609)
texture = ExtResource("15_jnc5g")
hframes = 8
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttaqueSpeciale2"]
libraries = {
"": SubResource("AnimationLibrary_8sxuh")
}

[node name="ProjectileJoueur" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 1, 1)
texture_filter = 1
position = Vector2(316, 307)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_kvrxu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectileJoueur"]
libraries = {
"": SubResource("AnimationLibrary_ot3op")
}

[node name="TimerProjectileNormal" type="Timer" parent="ProjectileJoueur"]
wait_time = 0.2
one_shot = true

[node name="TimerProjectileGros" type="Timer" parent="ProjectileJoueur"]
wait_time = 0.2
one_shot = true

[node name="Boite" type="Node2D" parent="."]

[node name="Tuile_boite_de_texte" parent="Boite" instance=ExtResource("2_64qka")]
position = Vector2(0, -25)
scale = Vector2(3, 3)
layer_0/tile_data = PackedInt32Array(589825, 65536, 0, 655361, 65536, 1, 589826, 65536, 0, 655362, 0, 12, 589827, 131072, 0, 655363, 0, 12, 589828, 196608, 0, 655364, 0, 12, 655383, 589824, 1, 589829, 65536, 0, 655365, 0, 12, 589830, 131072, 0, 655366, 0, 12, 589831, 196608, 0, 655367, 0, 12, 589832, 65536, 0, 655368, 0, 12, 589833, 131072, 0, 655369, 0, 12, 589834, 196608, 0, 655370, 0, 12, 589835, 65536, 0, 655371, 0, 12, 589836, 131072, 0, 655372, 0, 12, 589837, 196608, 0, 655373, 0, 12, 589838, 65536, 0, 655374, 0, 12, 589839, 131072, 0, 655375, 0, 12, 589840, 196608, 0, 655376, 0, 12, 589841, 65536, 0, 655377, 0, 12, 589842, 131072, 0, 655378, 0, 12, 589843, 196608, 0, 655379, 0, 12, 589844, 65536, 0, 655380, 0, 12, 589845, 131072, 0, 655381, 0, 12, 589846, 196608, 0, 655382, 0, 12, 786433, 851968, 0, 851969, 851968, 1, 786434, 0, 12, 851970, 851968, 1, 786455, 65536, 12, 851991, 65536, 13, 851971, 0, 13, 851972, 0, 13, 851973, 0, 13, 851974, 0, 13, 851975, 0, 13, 851976, 0, 13, 851977, 0, 13, 851978, 0, 13, 851979, 0, 13, 851980, 0, 13, 851981, 0, 13, 851982, 0, 13, 851983, 0, 13, 851984, 0, 13, 851985, 0, 13, 851986, 0, 13, 851987, 0, 13, 851988, 0, 13, 851989, 0, 13, 851990, 0, 13, 786454, 0, 12, 786453, 0, 12, 786452, 0, 12, 786451, 0, 12, 786450, 0, 12, 786449, 0, 12, 786448, 0, 12, 786447, 0, 12, 786446, 0, 12, 786445, 0, 12, 786444, 0, 12, 786443, 0, 12, 786442, 0, 12, 786441, 0, 12, 786440, 0, 12, 786439, 0, 12, 786438, 0, 12, 786437, 0, 12, 786436, 0, 12, 786435, 0, 12, 720898, 0, 12, 720899, 0, 12, 720900, 0, 12, 720901, 0, 12, 720902, 0, 12, 720903, 0, 12, 720904, 0, 12, 720905, 0, 12, 720906, 0, 12, 720907, 0, 12, 720908, 0, 12, 720909, 0, 12, 720910, 0, 12, 720911, 0, 12, 720912, 0, 12, 720913, 0, 12, 720914, 0, 12, 720915, 0, 12, 720916, 0, 12, 720917, 0, 12, 720918, 0, 12, 720919, 589824, 1, 720897, 720896, 0, 589847, 589824, 0, 589824, 0, 0, 655360, 0, 1, 720896, 0, 1, 786432, 786432, 0, 851968, 786432, 1)

[node name="btnPetiteAttaque" type="Button" parent="Boite/Tuile_boite_de_texte"]
offset_left = 15.3333
offset_top = 155.0
offset_right = 124.333
offset_bottom = 171.0

[node name="btnAttaqueSpecial" type="Button" parent="Boite/Tuile_boite_de_texte"]
offset_left = 15.3333
offset_top = 198.667
offset_right = 124.333
offset_bottom = 214.667
disabled = true

[node name="btnGrandeAttaque" type="Button" parent="Boite/Tuile_boite_de_texte"]
offset_left = 15.3333
offset_top = 177.0
offset_right = 124.333
offset_bottom = 193.0
disabled = true

[node name="btnFuire" type="Button" parent="Boite/Tuile_boite_de_texte"]
offset_left = 341.0
offset_top = 199.0
offset_right = 379.0
offset_bottom = 215.0

[node name="Fuire" type="Label" parent="Boite/Tuile_boite_de_texte"]
offset_left = 345.0
offset_top = 202.667
offset_right = 375.0
offset_bottom = 214.667
text = "Fuire"
label_settings = SubResource("LabelSettings_ba65b")

[node name="PetiteAttaque" type="Label" parent="Boite/Tuile_boite_de_texte"]
offset_left = 20.3333
offset_top = 159.0
offset_right = 105.333
offset_bottom = 171.0
text = "Petite attaque
"
label_settings = SubResource("LabelSettings_17i7y")

[node name="GrandeAttaque" type="Label" parent="Boite/Tuile_boite_de_texte"]
offset_left = 20.3333
offset_top = 180.0
offset_right = 112.333
offset_bottom = 192.0
text = "Grande attaque
"
label_settings = SubResource("LabelSettings_3e8ok")

[node name="AttaqueSpeciall" type="Label" parent="Boite/Tuile_boite_de_texte"]
offset_left = 20.3333
offset_top = 202.667
offset_right = 119.333
offset_bottom = 214.667
text = "Attaque sp√©ciale"
label_settings = SubResource("LabelSettings_ggg57")

[node name="BossVie" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)

[node name="TextureProgressBar" type="TextureProgressBar" parent="BossVie"]
texture_filter = 1
offset_left = 361.0
offset_top = 25.0
offset_right = 377.0
offset_bottom = 89.0
value = 75.0
fill_mode = 3
texture_under = ExtResource("8_vanl5")
texture_progress = ExtResource("9_ftsp3")

[node name="HeartRed1" type="Sprite2D" parent="BossVie"]
texture_filter = 1
position = Vector2(369, 33)
scale = Vector2(1, 1.04167)
texture = ExtResource("10_0avih")

[node name="QtVie" type="Label" parent="BossVie"]
offset_left = 366.667
offset_top = 46.0
offset_right = 371.667
offset_bottom = 94.0
text = "100
"
label_settings = SubResource("LabelSettings_2tlq4")
horizontal_alignment = 1
autowrap_mode = 3

[node name="TempsBossAvantAttaque" type="Timer" parent="."]
one_shot = true

[node name="TempsDeLattaque" type="Timer" parent="."]
one_shot = true

[node name="TempsDeLaGrosseAttaqueDePhilipe" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="TimerAvantChangementScene" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="labelNode" type="Node2D" parent="."]

[node name="Label5" type="Label" parent="labelNode"]
offset_left = 775.0
offset_top = 414.0
offset_right = 872.0
offset_bottom = 440.0
text = "Descriptions"

[node name="Label7" type="Label" parent="labelNode"]
offset_left = 658.0
offset_top = 515.0
offset_right = 974.0
offset_bottom = 541.0
text = "Fais 20 de d√©g√¢ts et consomme 2 heures."

[node name="Label8" type="Label" parent="labelNode"]
offset_left = 658.0
offset_top = 581.0
offset_right = 985.0
offset_bottom = 607.0
text = "Fais 100 de d√©g√¢ts et consomme 1 heure."

[node name="Label6" type="Label" parent="labelNode"]
offset_left = 658.0
offset_top = 447.0
offset_right = 967.0
offset_bottom = 473.0
text = "Fais 10 de d√©g√¢ts et consomme 1 heure."

[node name="Label4" type="Label" parent="labelNode"]
offset_left = 411.0
offset_top = 416.0
offset_right = 486.0
offset_bottom = 442.0
text = "Pr√©requis
"

[node name="Label3" type="Label" parent="labelNode"]
offset_left = 433.0
offset_top = 583.0
offset_right = 501.0
offset_bottom = 609.0
text = "Niveau 7"

[node name="Label2" type="Label" parent="labelNode"]
offset_left = 433.0
offset_top = 523.0
offset_right = 501.0
offset_bottom = 549.0
text = "Niveau 3"

[node name="IconCerveau3" type="Sprite2D" parent="labelNode"]
texture_filter = 1
position = Vector2(404, 597)
texture = ExtResource("15_rm1cg")

[node name="Label" type="Label" parent="labelNode"]
offset_left = 433.0
offset_top = 452.0
offset_right = 501.0
offset_bottom = 478.0
text = "Niveau 1"

[node name="IconCerveau2" type="Sprite2D" parent="labelNode"]
texture_filter = 1
position = Vector2(401, 531)
texture = ExtResource("15_rm1cg")

[node name="IconCerveau" type="Sprite2D" parent="labelNode"]
texture_filter = 1
position = Vector2(404, 463)
texture = ExtResource("15_rm1cg")

[node name="BoiteDeTextes" parent="." instance=ExtResource("18_trga6")]
self_modulate = Color(1, 1, 1, 0)

[node name="TimerAvantRetourMenue" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Noir" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(549.75, 168.5)
scale = Vector2(1846.5, 1509)
texture = ExtResource("19_v4430")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Noir"]
libraries = {
"": SubResource("AnimationLibrary_2nd8g")
}

[node name="fondueNoir" type="Timer" parent="."]
one_shot = true

[connection signal="AjouterTemps" from="." to="Joueur" method="_on_scene_combat_ajouter_temps"]
[connection signal="EnleverVieJoueur" from="." to="Joueur" method="_on_scene_combat_enlever_vie_joueur"]
[connection signal="timeout" from="AttaqueSpeciale1/TimerProjectileSpecial" to="." method="_on_timer_projectile_special_timeout"]
[connection signal="timeout" from="ProjectileJoueur/TimerProjectileNormal" to="." method="_on_timer_projectile_timeout"]
[connection signal="timeout" from="ProjectileJoueur/TimerProjectileGros" to="." method="_on_timer_projectile_gros_timeout"]
[connection signal="pressed" from="Boite/Tuile_boite_de_texte/btnPetiteAttaque" to="." method="_on_btn_petite_attaque_pressed"]
[connection signal="pressed" from="Boite/Tuile_boite_de_texte/btnAttaqueSpecial" to="." method="_on_btn_attaque_special_pressed"]
[connection signal="pressed" from="Boite/Tuile_boite_de_texte/btnGrandeAttaque" to="." method="_on_btn_grande_attaque_pressed"]
[connection signal="pressed" from="Boite/Tuile_boite_de_texte/btnFuire" to="." method="_on_btn_fuire_pressed"]
[connection signal="timeout" from="TempsBossAvantAttaque" to="." method="_on_temps_boss_avant_attaque_timeout"]
[connection signal="timeout" from="TempsDeLattaque" to="." method="_on_temps_de_lattaque_timeout"]
[connection signal="timeout" from="TempsDeLaGrosseAttaqueDePhilipe" to="." method="_on_temps_de_la_grosse_attaque_de_philipe_timeout"]
[connection signal="timeout" from="TimerAvantChangementScene" to="." method="_on_timer_avant_changement_scene_timeout"]
[connection signal="timeout" from="TimerAvantRetourMenue" to="." method="_on_timer_avant_retour_menue_timeout"]
[connection signal="timeout" from="fondueNoir" to="." method="_on_fondue_noir_timeout"]
